[FIX] LESS syntax cleanup, signup steps adjust and confirm alignment(RT-2953)

--- a/src/less/ripple/landing.less
+++ b/src/less/ripple/landing.less
@@ -250,6 +250,10 @@ header.loggedOut {
       margin-top: 65px;
     }
 
+    .auth-attention {
+      margin: 120px 0 0;
+    }
+
     .signUpWrapper {
       text-align: center;
       padding-left: 0 !important;
